Restyled logout and delprofile btns

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
 {% block title %}Dashboard{% endblock %}
 {% block content %}
-<a href="/logout" id="logout-btn">Logout</a>
-<a href="/del_profile" id="del-acct-btn">Delete Profile</a>
+<div id="logout-delprofile-container">
+    <a href="/logout" id="logout-btn">Logout</a>
+    <a href="/del_profile" id="del-acct-btn">Delete Profile</a>
+</div>
+
 <form action="/add_todo" method="post" id="todo-form">
     <input type="text" placeholder="New Todo..." name="body" autocomplete="off" maxlength="65">
     <button type="submit">Add</button>
