--- a/static/style.css
+++ b/static/style.css
@@ -46,11 +46,16 @@ main {
     border-radius: 0.5rem;
 }
 
+#logout-delprofile-container {
+    padding-bottom: 2rem;
+}
+
 #logout-btn {
     color: #fff;
     background: #7ae;
     padding: 0.5rem 1rem 0.5rem 1rem;
     border-radius: 0.5rem;
+    float: inline-start;
 }
 
 #del-acct-btn {
@@ -58,6 +63,7 @@ main {
     background: #f88;
     padding: 0.5rem 1rem 0.5rem 1rem;
     border-radius: 0.5rem;
+    float: inline-end;
 }
 
 #todo-container {
